--- a/style.css
+++ b/style.css
@@ -2,46 +2,49 @@
 
 
 
-body {
+html, body {
+    height: 100%;
     margin: 0;
     padding: 0;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 main {
-    width:40%;
-    height:40%;
-    margin-right: 10px;
-    margin-left: 20px;
-    width: 1440px; 
-    height: 1024px;
-    margin: 0;
-    background-color: #f7f2b8; 
+    flex: 1;
+    width:auto;
+    max-width: 1440px;
+    height: auto;
+    margin: 0 auto;
+    background-color: white; 
     padding: 0;
     box-sizing: border-box; 
 }
 
 .logo {
-    margin-left: 40px;
-    margin-top: 40px;
+    margin-left: 0px;
+    margin-top: 0px;
 }       
 
 .container {
-    width:100px;
+    width:auto;
+    max-width: 1440px;
     display: flex;
     margin: auto;
     justify-content:left;
-    width: 1440px; 
+    width: auto; 
     height: px
 }
-
-
 
 .box__input {
     display: flex;
     flex-direction: column;
     align-items:flex-start;
-    width: 100%;
-    height: 680px;
+    width: auto;
+    height: auto;
     padding: 0px;
     margin-top: 168px;
     justify-content:flex-start;
@@ -57,9 +60,9 @@ main {
 
 .digite-texto {
     display: flex;
-    margin-top: 168 ;
-    width:100%;
-    text-align:left;
+    margin-top: auto;
+    width: auto;
+    text-align: center;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-weight: 32px;
@@ -69,16 +72,17 @@ main {
 .textarea {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 32px;
+    font-weight: normal;
     font-style: normal;
-    text-align: left;
+    text-align: center;
 } 
 
 
 .digite-texto textarea {
     border: none;
     background: none;
-    width: 50%;
+    width: auto;
+    max-width: 680px;
     font-size: 28px;
     color: #c21c1c;
     resize: none;
@@ -88,7 +92,9 @@ main {
 
 .botoes {
     display: flex;
-    width:100%;
+    flex-wrap: wrap;
+    width: 130%;
+    margin: -150px;
     align-content: 0;
     margin-top: 0;
     font-family: "Inter", sans-serif;
@@ -113,42 +119,40 @@ main {
 .saida {
     display: flex;
     justify-content:center;
-    width: 400px;
-    height: 944px;
+    width: auto;
+    max-width: 400px;
+    height: auto;
     align-items: center;
-    margin-top: 40px;
-    margin-right: 40px; 
+    margin: 40px auto;
 }
 
 .conteudo-resultado-vazio {
     display: flex;
-    background: #fefefe;
+    background: #ffefef;
     text-align: center;
-    width: 20%;
-    padding: 0px 0;
+    padding: 20px;
     border-radius: 20px;
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
     height: 944px;
-    width: 400px;
+    width: auto;
 }
 
 
 .conteudo-resultado-ok {
     display: flex;
-    background: #fefefe;
+    background: #ffefef;
     text-align: center;
-    width: 20%;
-    padding: 0px 0;
+    padding: 20px;
     border-radius: 20px;
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
     height: 944px;
-    width: 400px;
+    width: auto;
 }
 
 .conteudo-resultado-ok textarea {
     border: none;
     background: none;
-    width: 100%;
+    width: auto;
     font-size: 20px;
     color: #0c0c0c;
     resize: none;
@@ -160,58 +164,47 @@ main {
 }
 
 
-
 .cripto {
-    padding: 20px;
-    width: 336px;
+    padding: 15px;
+    width: 100%;
+    max-width: 336px;
     margin-right: 20px;
-    padding: 20px;
-    width: 270px;
     border-radius: 24px;
     border: 1px solid #c21c1c;
-    font-weight: bold;
+    font-weight: normal;
     cursor: pointer;
 }
 
 .descripto {
-    padding: 20px;
-    width: 336px;
-    padding: 17px;
-    height: 67px;
+    padding: 15px;
+    width: 100%;
+    max-width: 336px;
+    margin-right: 20px;
     border-radius: 24px;
     border: 1px solid #c21c1c;
-    color: #c21c1c;
     font-weight: normal;
     cursor: pointer;
 }
 
 
 .copiar {
-    padding: 0px;
-    width: 336px;
-    height: 67px;
+    padding: 15px;
+    width: 100%;
+    max-width: 336px;
+    margin-right: 20px;
     border-radius: 24px;
     border: 1px solid #c21c1c;
-    color: #c21c1c;
     font-weight: normal;
-    cursor: pointer;
-    margin-top: 0px;
-    margin-top: 10px;   
+    cursor: pointer; 
 }
 
-.cripto {
-    padding: 20px;
-    width: 336px;
+.cripto{
     background: #c21c1c;
     color: white;
-    font-family: "Inter", sans-serif;
-    
-    font-weight: 16px;
-    font-style: normal;    
 }
 
 .cripto:hover, .descripto:hover, .copiar:hover {
-    transform: scale(1.2);
+    transform: scale(1.05);
 }
 
 
@@ -224,25 +217,16 @@ main {
 }
 
 #logo {
-    width: 100px;
+    width: 60px;
     height: 70px;
-    margin-top: 20px;
-    margin-left: 60px;
-    margin-bottom: 944px;
+    margin: 20px 20px;
 }
 
 .conteudo-resultado-vazio img {
-    display: flex; 
-    margin-left: -100px;
+    margin: -100px;
+    right: -500px;
+    left: -500px;
     transform: scale(0.5);
-}
-
-.conteudo-resultado-vazio h2 {
-    margin-right:0px;
-}
-
-.conteudo-resultado-vazio p {
-    margin-top: 0px; 
 }
 
 
@@ -252,17 +236,15 @@ h2 {
     font-optical-sizing: auto;
     font-weight: 4px;
     font-style: normal;
-    width:280px;
-    padding: 10px;
-    padding-top: 0px;
-    padding-left: 60px;
+    width: 280px;
+    padding: 10px 60px;
 }
 
 p2 {
     display: flex;  
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 16px;
+    font-weight: normal;
     font-style: normal;
     width: 280px;
     padding: 10px;
@@ -273,14 +255,14 @@ p2 {
 p {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 16px;
+    font-weight: normal;
     font-style: normal;
 }
 
 textarea {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 32px;
+    font-weight: normal;
     font-style: normal;
 }
 
@@ -307,15 +289,15 @@ a {
 .rodape {
     display: flex;
     align-items: center;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    position: relative;
+    justify-content: center;
+    padding: auto;
+    left: auto;
+    right: auto;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-weight: 40px;
     font-style: normal;
-    justify-content: center;
     color:aquamarine;
     background-color: #050505;
 }
