--- a/style.css
+++ b/style.css
@@ -6,11 +6,13 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    background-color: white;
 }
 
 body {
     display: flex;
     flex-direction: column;
+    background-color: white;
 }
 
 main {
